# clockem

./: Cargo.toml  LICENSE  README.md
default-configs/: config.toml  style.css
example/: config.json
src/: clock.rs  config.json  default_config.json  default_config.toml  default_style.css  formatting.rs  main.rs  style.css  wallpaper.rs  weather.rs
