[package]
name = "clockem"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
gdk4 = "0.9.5"
gio = "0.20.7"
glib = "0.20.7"
gtk4 = "0.9.5"
gtk4-layer-shell = "0.4.0"
log = "0.4.25"
pango = "0.20.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"
