[package]
name = "clockem"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9.5", features = ["v4_8"] }
gtk4-layer-shell = "0.4.0"
chrono = "0.4.39"
gdk4 = "0.9.5"
gio = "0.20.7"
glib = "0.20.7"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
weer_api = "0.1.1"
